# sdk-reference

./: .gitignore  README.md  _config.yml  pyproject.toml
examples/: 01_minimal_invoke.py  02_negotiated_invoke.py  03_dag_pipeline.py  04_streaming_cancel.py  05_escrow_e2e.py
src/acmp/: __init__.py  buyer.py  dag.py  errors.py  escrow.py  escrow_stub.py  messages.py  negotiation.py  provider.py  transport.py  ws_transport.py
tests/: test_l1_streaming.py  test_l1_transaction.py  test_l2_dag.py  test_l4_escrow.py  test_l6_negotiation.py  test_ws_transport.py
