[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acmp"
version = "0.1.0"
description = "Reference implementation of the A2Agora Agent Compute Market Protocol (ACMP)"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "A2Agora contributors" }]
keywords = ["agent", "compute", "market", "protocol", "acmp", "mcp"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["src/acmp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
